<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutHistoryLocationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxBackgroundColor="?attr/portalCardColor"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editHistoryLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="?attr/portalTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutHistoryLocationLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_lat"
        app:boxBackgroundColor="?attr/portalCardColor"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editHistoryLocationLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal|numberSigned"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="?attr/portalTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutHistoryLocationLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_lon"
        app:boxBackgroundColor="?attr/portalCardColor"
        app:boxBackgroundMode="filled">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editHistoryLocationLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal|numberSigned"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="?attr/portalTextColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEditHistoryLocationOnMap"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_location_on_map" />

</LinearLayout>
